--- a/style/style.css
+++ b/style/style.css
@@ -42,6 +42,9 @@ margin: 0 auto ;
 max-width: 80rem;
 margin-top: 3rem;
 padding: 2rem;
+-webkit-box-shadow: 10px 10px 5px -2px rgba(0,0,0,0.76);
+-moz-box-shadow: 10px 10px 5px -2px rgba(0,0,0,0.76);
+box-shadow: 10px 10px 5px -2px rgba(0,0,0,0.76);
 
  
 border: solid .5rem grey;
